test/error/MethodShortReturn.ci
public static class Test
{
	public static bool Run() return true; // ERROR: Expected LeftBrace, got Return
}
